# ChangeLog for www-client/mozilla-firefox
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/ChangeLog,v 1.577 2009/12/13 17:54:58 nirbheek Exp $

  13 Dec 2009; Nirbheek Chauhan <nirbheek@gentoo.org>
  mozilla-firefox-3.5.5.ebuild:
  Alongwith newer sqlite, we also need fts3 support enabled -- bug 281695
  and bug 280114

  13 Dec 2009; Nirbheek Chauhan <nirbheek@gentoo.org>
  mozilla-firefox-3.0.11.ebuild:
  Remove all keywords from 3.0.11 except sparc

  13 Dec 2009; Raúl Porcel <armin76@gentoo.org>
  mozilla-firefox-3.5.4.ebuild, mozilla-firefox-3.5.5.ebuild:
  Add ~sparc

  13 Dec 2009; Nirbheek Chauhan <nirbheek@gentoo.org>
  -mozilla-firefox-3.0.13.ebuild, -mozilla-firefox-3.5.3.ebuild,
  -mozilla-firefox-3.5.3-r1.ebuild:
  Remove old vulnerable versions of mozilla-firefox

  13 Dec 2009; Nirbheek Chauhan <nirbheek@gentoo.org>
  mozilla-firefox-3.5.5.ebuild:
  Fix unquoted variable

  13 Dec 2009; Nirbheek Chauhan <nirbheek@gentoo.org>
  mozilla-firefox-3.5.5.ebuild:
  Bump sqlite dep to fix crasher issues; bug 281695 ; bug 280114 ; bug
  207701

  20 Nov 2009; Raúl Porcel <armin76@gentoo.org>
  mozilla-firefox-3.5.4.ebuild, mozilla-firefox-3.5.5.ebuild:
  Add hacks for sparc

  12 Nov 2009; Joseph Jezak <josejx@gentoo.org>
  mozilla-firefox-3.5.4.ebuild:
  Marked ppc/ppc64 stable for bug #280393.

  11 Nov 2009; Jory A. Pratt <anarchy@gentoo.org>
  mozilla-firefox-3.5.5.ebuild:
  bump patchset to include nanojit.patch from upstream for sparc support,
  remove exports from ebuild that are no longer needed.

  09 Nov 2009; Christian Faulhammer <fauli@gentoo.org>
  mozilla-firefox-3.5.4.ebuild:
  stable x86, security bug 280393

  13 Dec 2009; Nirbheek Chauhan <nirbheek@gentoo.org>
  mozilla-firefox-3.5.5.ebuild:
  Bump sqlite dep to fix crasher issues; bug 281695 ; bug 280114 ; bug
  207701

*mozilla-firefox-3.5.5 (07 Nov 2009)

  07 Nov 2009; Jory A. Pratt <anarchy@gentoo.org>