@@ -338,6 +338,6 @@ EBUILD mozilla-firefox-2.0.0.19.ebuild 10225 RMD160 0012156030749abb2725f15cebb6
 EBUILD mozilla-firefox-3.0.11.ebuild 9608 RMD160 2a94c8aa47b0e6d6388b6530496c10c17f62bcac SHA1 c6c657508c773d9bb4d841eb051d5b2a6d863127 SHA256 2249cd1f42591838ca001de499f93998577111d0b3170806f0672b9ede8c97ef
 EBUILD mozilla-firefox-3.0.14.ebuild 9650 RMD160 9293c00888c0c7751ae90b1eccba7c152e357c0f SHA1 e6f909b28a0c6ee56d23f94cf8f1079002d10fed SHA256 c3e939d50c25464a461da249c85406bc1f0b0a4e722ff1493cd777359fd7f81d
 EBUILD mozilla-firefox-3.5.4.ebuild 8472 RMD160 411fef59518be8120f48071f168c16706727fddc SHA1 a9feed7cfaab5e988d956b7966933761e1a19dbd SHA256 31e900df5a5e53a057bc465cc62be0ec373d5cf612617e69ccfb23e173a13109
-EBUILD mozilla-firefox-3.5.5.ebuild 8530 RMD160 1ae7579a453d71920e947239eec16147f8ab02ff SHA1 9cc3bdf242adbe9e803795f0ca75d188c399c2b0 SHA256 337063a5d777086ec578df848ce2642bb4099249e828a2ff78d2d74bd4719e97
-MISC ChangeLog 108514 RMD160 113afe59ecc13c6c2dcdd8d3cdf3fcdec0479334 SHA1 de6bba86f50888672da2950fd8c2d15b44b57e1e SHA256 4f60fbfc0ebb3893c7c0c852f798d671d69dabf9cefc11a73fde36ed8426aefe
+EBUILD mozilla-firefox-3.5.5.ebuild 8543 RMD160 7115e3388bb1aabc4a37a36779a51a2862d749cb SHA1 a08259a9456ff92d3dc7c6f92d01e2874e325ceb SHA256 53d7685ffa11f6c142b2839f07953dc25952ad60a790bfd05c0e96671d7db15d
+MISC ChangeLog 108621 RMD160 905078e94f754b30f67aa076e8fa7bf42862e12f SHA1 bcf0c166a7d700ad05c86a6ae3290a34b72028da SHA256 e0123983e5edf729d15c0c6c8526ae81de9ca8688d83d30e6fd7d8e616739ed0
 MISC metadata.xml 860 RMD160 9dc7089f75140dda59a5ee9eaff41c35febd25bc SHA1 df2fae94e9f4a9fba7399aea0bfe0a38a1d01e89 SHA256 783b95078850c3b150069dcdead96113fe1a44036e61cae9d035f15c3bd1660e
